--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "chat-example",
-  "version": "0.0.0",
-  "description": "A chat example to showcase how to use `socket.io` with a static `express` server with `async` for control flow.",
-  "main": "server.js",
-  "repository": "",
-  "author": "Mostafa Eweda <mo.eweda@gmail.com>",
+  "name": "messenger-webhook",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.1",
-    "express": "~3.2.4",
-    "morgan": "^1.7.0",
-    "request": "^2.72.0"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
   }
 }
